--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fallen-zero/use",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "fallen-zero Api",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.mjs",
@@ -28,6 +28,14 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/about-npm/fallen-zero-use.git"
+  },
+  "bugs": {
+    "url": "https://github.com/about-npm/fallen-zero-use/issues"
+  },
+  "homepage": "https://github.com/about-npm/fallen-zero-use#readme",
   "keywords": [
     "vue",
     "typescript",
