--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fallen-zero/use",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "fallen-zero Api",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.mjs",
@@ -22,7 +22,7 @@
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "prepare": "pnpm build && npm publish"
+    "prepare": "pnpm build"
   },
   "publishConfig": {
     "access": "public",
